# mcp-server-openai

./: Dockerfile  LICENSE  README.md  pyproject.toml  smithery.yaml
src/mcp_server_openai/: __init__.py  llm.py  server.py  test_openai.py
